# CryoDataBot

./: .gitignore  A2_DataCleanup.ipynb  A_fetch_sample_info.py  B1_UTILS.py  B2_UTILS_data2npy.py  CHANGE_LOG.txt  CryoDataBotConfig.ini  GUI_DEV_COMMANDS  GUI_DEV_COMMANDS.md  JUNK_DONT_COMMIT.py  LICENSE  MRC.py  Main.py  Makefile  Map_To_Model.py  PENDING_CHANGES.txt  README.md  Refine  SANDBOX2.py  SANDBOX3.py  SANDBOX_temp5.py  Utils_generate_dataset.py  Utils_generate_dataset_grayson.py  Utils_preprocess.py  Utils_search_EMDB.py  atom_in_models.py  atom_in_models.txt  atom_inclusion_extractor.py  configwriter.py  csv_refinement.py  dataset_gen_tool_v11_copy.ui  dataset_gen_tool_v11_experimental_copy.ui  dataset_gen_tool_v12.ui  dataset_gen_tool_v5_2_fixedspacing.ui  dependent_spinboxes_test.py  download_file_0.csv  download_file_01.csv  download_file_01_classified_qscore.csv  download_file_01_qscore.csv  download_file_01_review.csv  (+75 more)
GUI_custom_widgets/: LabelComboBox.py  LabelComboBox_v2.py  animated_toggle.py  commaLineEdit.py  easyCloseDialog.py  popupDialog_alt.py  z_Tag_main_alt_allcode.py  z_Tag_main_alt_allcode_v2_5.py
JUNK_TEST_FOLDER/: download_file_08_review.csv  download_file_10.csv  download_file_11.csv
QR CODE MAKER (MOVE TO ANOTHER FOLDER)/: main.py  main_ui.py
QR_CODE_MAKER_MOVETOANOTHERFOLDER/: main.py  main.ui  main_ui.py  style.qss
backend_core/: downloading_and_preprocessing.py  downloading_and_preprocessing_NO_GPU.py  downloading_and_preprocessing_NO_GPU2.py  downloading_and_preprocessing_NO_GPU_newversion.py  fetch_sample_info.py  generate_dataset.py  preview_search.py  redundancy_filter.py
backup/: A2_DataCleanup.ipynb  B0_Dataset_generation - backup.py  B0_Dataset_generation.py  B1_UTILS.py  B2_UTILS_data2npy - 1-17.py  B2_UTILS_data2npy - backup.py  B2_UTILS_data2npy-new.py  MRC.py  Utils_preprocess.py  Utils_search_EMDB.py  Z0_download_from_csv_file.py  atom_inclusion_extractor.py  csv_refinement.py  guiskin_OUTDATED.py  main - old.py  main_gen_sample_info.py  main_gen_sample_info_MK.py  (+3 more)
(+219 files in other folders)
